--- a/style/blocks/_elements.scss
+++ b/style/blocks/_elements.scss
@@ -59,6 +59,88 @@
     font-size: 16px;
     white-space: nowrap;
 }
+.user__contacts {
+    border: 1px solid #F3F3F3B2;
+    background: rgba(243, 243, 243, 0.3);
+    border-radius: 50px;
+    padding-left: 20px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #F3F3F3;
+    width: 240px;
+    height: 50px;
+    &:active {
+        background: rgba(243, 243, 243, 0.7);
+        border: 1px solid #F3F3F3;
+    }
+    &:invalid {
+        background: rgba(243, 243, 243, 0.5);
+        border: 1px solid #FF1414;
+    }
+    &::placeholder {
+        color: #F3F3F3;
+    }
+    &:focus-visible {
+        outline: none;
+    }
+}
+.checkbox-block {
+    display: block;
+    position: relative;
+    input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+        top: 3px;
+        height: 16px;
+        width: 16px;
+        &:checked+label:before {
+            background: url("/img/chechbox.svg") center no-repeat, #FFFFFF;
+        }
+    }
+    label {
+        color: #F3F3F3;
+        display: inline-flex;
+        user-select: none;
+        font-size: 18px;
+        a {
+            text-decoration: underline;
+            color: #FFFFFF;
+        }
+        &:before {
+            content: '';
+            display: inline-block;
+            flex-shrink: 0;
+            flex-grow: 0;
+            height: 14px;
+            width: 14px;
+            border: #FFFFFF solid 1px;
+            border-radius: 2px;
+            background: #18154B;
+            margin: 3px 10px 0 0;
+        }
+    }
+}
+.pagination {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    span {
+        content: '';
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #38B0C166;
+    }
+    .banner__select, .hits__select {
+        width: 12px;
+        height: 12px;
+        background-color: #38B0C1;
+    }
+}
 @media (max-width: 580px) {
     .white-button {
         width: 180px;
@@ -68,5 +150,21 @@
         width: 94px;
         font-size: 14px;
         gap: 8px;
+    }
+    .checkbox-block label {
+        font-size: 12px;
+        &:before {
+            margin-top: 0;
+        }
+    }
+    .pagination {
+        span {
+            height: 8px;
+            width: 8px;
+        }
+        .banner__select, .hits__select {
+            height: 10px;
+            width: 10px;
+        }
     }
 }
