--- a/style/index.css
+++ b/style/index.css
@@ -63,6 +63,91 @@
   white-space: nowrap;
 }
 
+.user__contacts {
+  border: 1px solid rgba(243, 243, 243, 0.6980392157);
+  background: rgba(243, 243, 243, 0.3);
+  border-radius: 50px;
+  padding-left: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #F3F3F3;
+  width: 240px;
+  height: 50px;
+}
+.user__contacts:active {
+  background: rgba(243, 243, 243, 0.7);
+  border: 1px solid #F3F3F3;
+}
+.user__contacts:invalid {
+  background: rgba(243, 243, 243, 0.5);
+  border: 1px solid #FF1414;
+}
+.user__contacts::placeholder {
+  color: #F3F3F3;
+}
+.user__contacts:focus-visible {
+  outline: none;
+}
+
+.checkbox-block {
+  display: block;
+  position: relative;
+}
+.checkbox-block input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  top: 3px;
+  height: 16px;
+  width: 16px;
+}
+.checkbox-block input:checked + label:before {
+  background: url("/img/chechbox.svg") center no-repeat, #FFFFFF;
+}
+.checkbox-block label {
+  color: #F3F3F3;
+  display: inline-flex;
+  user-select: none;
+  font-size: 18px;
+}
+.checkbox-block label a {
+  text-decoration: underline;
+  color: #FFFFFF;
+}
+.checkbox-block label:before {
+  content: "";
+  display: inline-block;
+  flex-shrink: 0;
+  flex-grow: 0;
+  height: 14px;
+  width: 14px;
+  border: #FFFFFF solid 1px;
+  border-radius: 2px;
+  background: #18154B;
+  margin: 3px 10px 0 0;
+}
+
+.pagination {
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.pagination span {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: rgba(56, 176, 193, 0.4);
+}
+.pagination .banner__select, .pagination .hits__select {
+  width: 12px;
+  height: 12px;
+  background-color: #38B0C1;
+}
+
 @media (max-width: 580px) {
   .white-button {
     width: 180px;
@@ -72,6 +157,20 @@
     width: 94px;
     font-size: 14px;
     gap: 8px;
+  }
+  .checkbox-block label {
+    font-size: 12px;
+  }
+  .checkbox-block label:before {
+    margin-top: 0;
+  }
+  .pagination span {
+    height: 8px;
+    width: 8px;
+  }
+  .pagination .banner__select, .pagination .hits__select {
+    height: 10px;
+    width: 10px;
   }
 }
 .header {
@@ -577,7 +676,6 @@ main {
   font-weight: 600;
   color: #FFFFFF;
 }
-
 .banner__guarantee {
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
   border-radius: 10px;
@@ -603,28 +701,6 @@ main {
   right: 45px;
   top: 95px;
 }
-
-.pagination {
-  position: absolute;
-  right: 30px;
-  bottom: 30px;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-.pagination span {
-  content: "";
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: rgba(56, 176, 193, 0.4);
-}
-.pagination .banner__select, .pagination .hits__select {
-  width: 12px;
-  height: 12px;
-  background-color: #38B0C1;
-}
-
 .banner__discount {
   border-radius: 10px;
   height: 440px;
@@ -639,7 +715,6 @@ main {
   bottom: 30px;
   right: 30px;
 }
-
 .banner__discount-title {
   font-size: 28px;
   font-weight: 800;
@@ -648,13 +723,11 @@ main {
   text-transform: uppercase;
   line-height: 38.19px;
 }
-
 .banner__bitcoin {
   position: absolute;
   left: 8px;
   bottom: 23px;
 }
-
 .banner__sub-title {
   display: flex;
   align-items: center;
@@ -679,8 +752,8 @@ main {
   .banner__bitcoin {
     top: 40px;
     right: 8px;
-    left: auto;
-    bottom: auto;
+    left: unset;
+    bottom: unset;
   }
   .banner__discount {
     height: 320px;
@@ -715,14 +788,14 @@ main {
   .banner__guarantee {
     padding: 30px 0 0 30px;
     height: 400px;
+    background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) 65%, rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
   }
   .banner__guarantee img {
-    width: 186px;
     right: 16px;
     bottom: 36px;
-    top: auto;
+    top: unset;
   }
-  .pagination {
+  .banner .pagination {
     right: 50%;
     bottom: 20px;
     transform: translate(50%, 0);
@@ -738,7 +811,7 @@ main {
   .banner__guarantee h2 {
     font-size: 22px;
     line-height: 30px;
-    width: 200px;
+    max-width: calc(100vw - 100px);
     margin-bottom: 10px;
   }
   .banner__guarantee h3 {
@@ -754,14 +827,12 @@ main {
 .categories {
   margin: 80px 0 10px 0;
 }
-
-.categories__title {
+.categories h2 {
   font-size: 36px;
   font-weight: 800;
   color: #18154B;
   text-transform: uppercase;
 }
-
 .categories__product-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -769,7 +840,6 @@ main {
   width: 100%;
   margin-top: 40px;
 }
-
 .categories__product {
   height: 170px;
   border-radius: 10px;
@@ -792,7 +862,6 @@ main {
   line-height: 23.4px;
   font-weight: 600;
 }
-
 .categories__product-img {
   position: absolute;
   top: 20px;
@@ -829,7 +898,7 @@ main {
   }
 }
 @media (max-width: 684px) {
-  .categories__title {
+  .categories h2 {
     font-size: 22px;
   }
   .categories__product-list {
@@ -845,21 +914,18 @@ main {
   position: relative;
   padding: 50px 10px 0 60px;
 }
-
-.advantages__title {
+.advantages h2 {
   font-size: 36px;
   font-weight: 800;
   width: 340px;
   text-transform: uppercase;
   color: #FFF;
 }
-
 .advantages__img {
   position: absolute;
   bottom: 15px;
   left: 55px;
 }
-
 .advantages__block {
   width: calc(100% - 480px);
   display: grid;
@@ -870,7 +936,6 @@ main {
   top: 50px;
   right: 0;
 }
-
 .advantages__item img {
   margin-bottom: 4px;
   border-radius: 50%;
@@ -913,7 +978,10 @@ main {
   }
 }
 @media (max-width: 480px) {
-  .advantages__title {
+  .advantages {
+    background: url("/img/advantages_bg_mobile.svg"), radial-gradient(420px 420px at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(420px 420px at 108.58% 57.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+  }
+  .advantages h2 {
     font-size: 22px;
     font-weight: 800;
     width: 240px;
@@ -929,9 +997,6 @@ main {
   }
   .advantages__item img {
     margin: 0;
-  }
-  .advantages {
-    background: url("/img/advantages_bg_mobile.svg"), radial-gradient(420px 420px at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(420px 420px at 108.58% 57.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
   }
 }
 .hits {
@@ -951,15 +1016,13 @@ main {
   bottom: 0;
   transform: translate(50%, 0);
 }
-
 .hits__block {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 45px;
+  row-gap: 55px;
   height: 360px;
 }
-
 .hits__product {
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
   background-color: #FFFFFF;
@@ -975,7 +1038,6 @@ main {
 .hits__product .button-gradient {
   margin: 0 auto;
 }
-
 .hits__product-name {
   font-size: 14px;
   font-weight: 600;
@@ -984,7 +1046,6 @@ main {
   text-overflow: ellipsis;
   margin: 10px 0 6px;
 }
-
 .hits__cart {
   width: 40px;
   height: 40px;
@@ -995,12 +1056,10 @@ main {
   justify-content: center;
   align-items: center;
 }
-
 .hits__product-img {
   height: 160px;
   margin: 0 auto;
 }
-
 .hits__presence {
   font-size: 12px;
   font-weight: 600;
@@ -1019,7 +1078,6 @@ main {
   left: -14px;
   top: 5px;
 }
-
 .hits__price-block {
   display: flex;
   align-items: center;
@@ -1031,7 +1089,6 @@ main {
   font-weight: 700;
   color: #303239;
 }
-
 .hits__price-discount {
   display: flex;
   align-items: center;
@@ -1042,7 +1099,6 @@ main {
   text-decoration: line-through;
   margin-left: 8px;
 }
-
 .hits__label {
   position: absolute;
   top: 15px;
@@ -1061,14 +1117,12 @@ main {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .hits__favourite {
   position: absolute;
   top: 15px;
   right: 15px;
   width: 22px;
 }
-
 .hits__show-more {
   display: none;
   position: absolute;
@@ -1102,7 +1156,10 @@ main {
   .hits__product .button-gradient {
     width: 100%;
   }
-  .pagination {
+  .hits__show-more {
+    display: unset;
+  }
+  .hits .pagination {
     display: none;
   }
 }
@@ -1153,8 +1210,150 @@ main {
     height: 16px;
     width: 16px;
   }
-  .button-gradient {
+  .hits .button-gradient {
     font-size: 10px;
+  }
+}
+.about {
+  display: grid;
+  column-gap: 75px;
+  grid-template-columns: 6.45fr 460px;
+  margin-top: 80px;
+}
+.about h2 {
+  text-transform: uppercase;
+  font-size: 36px;
+  color: #18154B;
+  margin-bottom: 40px;
+}
+.about__text p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #303239;
+}
+.about__opt-text {
+  padding-top: 23.2px;
+}
+.about__img {
+  display: flex;
+  align-items: center;
+}
+.about__img img {
+  max-width: 100%;
+}
+.about__points-block {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-column: span 2;
+  margin-top: 80px;
+  column-gap: 20px;
+}
+.about__point p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #303239;
+  max-width: 130px;
+}
+.about__point img {
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
+  border-radius: 50%;
+}
+
+@media (max-width: 980px) {
+  .about {
+    display: unset;
+    margin-top: 60px;
+  }
+  .about h2 {
+    margin-bottom: 30px;
+  }
+  .about__img {
+    justify-content: center;
+    margin-top: 30px;
+  }
+  .about__points-block {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 30px;
+    row-gap: 20px;
+    padding-left: 40px;
+  }
+}
+@media (max-width: 580px) {
+  .about__points-block {
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+  .about__point {
+    display: flex;
+    align-items: center;
+    column-gap: 14px;
+  }
+  .about__point p {
+    max-width: none;
+  }
+}
+.help {
+  margin-top: 80px;
+  padding: 50px 60px;
+  background: radial-gradient(284px 284px at 0 120%, rgba(66, 232, 224, 0.6) 0%, rgba(64, 221, 218, 0.6) 1.57%, rgba(58, 174, 192, 0.6) 9.21%, transparent 72%), linear-gradient(89.24deg, rgba(13, 116, 139, 0.3) -14.97%, rgba(26, 11, 115, 0.3) 81.3%, transparent), url("/img/help-bg.png") 0 -92px;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
+}
+.help__blank {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 760px;
+  gap: 20px;
+}
+.help__blank .white-button {
+  width: 240px;
+}
+.help h2 {
+  font-size: 28px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+.help h3 {
+  color: #FFFFFF;
+  margin: 10px 0 25px;
+  font-size: 18px;
+}
+
+@media (max-width: 900px) {
+  .help {
+    padding: 30px 25px;
+  }
+  .help .white-button {
+    width: 100%;
+  }
+  .help .user__contacts {
+    width: calc(50% - 10px);
+  }
+  .help__blank {
+    gap: 15px;
+  }
+  .help h2 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 580px) {
+  .help {
+    background: radial-gradient(284px 284px at 0 120%, rgba(66, 232, 224, 0.6) 0%, rgba(64, 221, 218, 0.6) 1.57%, rgba(58, 174, 192, 0.6) 9.21%, transparent 72%), linear-gradient(89.24deg, rgba(13, 116, 139, 0.3) -14.97%, rgba(26, 11, 115, 0.3) 81.3%, transparent), url("/img/help-bg.png") right -22px;
+  }
+  .help .user__contacts {
+    width: 100%;
+  }
+  .help .white-button {
+    order: 1;
+  }
+  .help__label-for {
+    position: absolute;
+  }
+  .help h2 {
+    font-size: 20px;
+  }
+  .help h3 {
+    font-size: 14px;
   }
 }
 
